# mohasebeh

./: README.md  makefile  pyproject.toml  requiremnts.txt
.github/workflows/: main.yml
mohasebeh_v1/: __init__.py  auth.py  db.py  home.py  schema.sql  singleton.py  workinfo.py  works_handeling.py
mohasebeh_v1/templates/: a.html  home.html  new.html
mohasebeh_v1/templates/auth/: login.html  register.html
mohasebeh_v1/templates/errors/: 404.html
mohasebeh_v1/templates/orix/: layout.html
mohasebeh_v1/templates/work/: work.html
tests/: conftest.py  test_app_factory.py  test_auth.py  test_db.py  test_schema.sql  test_work.py
