
#انتخاب بویلد سیستم
[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

# مشخصات پروژه 
[project]
name = "mohasebeh"
version = "0.0.1"
authors = [
  { name="hossien_solymany", email="hossien014@gmail.com" },
]
description = "program to track personal growth"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# وابستگی ها
dependencies = [
  "httpx",
  "gidgethub[httpx]>4.0.0",
  "django>2.1; os_name != 'nt'",
  "django>2.0; os_name == 'nt'",
]
#صفحات مجازی 
[project.urls]
"github_page" = "https://github.com/hossien014"